<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">DraStic</string>
    <string name="app_provider_info">DraStic Internal Data</string>
    <string name="btn_rom_all">"All
Games"</string>
    <string name="btn_rom_recent">"Recent
Games"</string>
    <string name="empty" />
    <string name="menu_settings">Settings</string>
    <string name="search_menu_title">Search</string>
    <string name="set_moga_showmapping">Show MOGA Button Mapping</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="str_romlist_nothing_found">No game folders added. Add one with the button above!</string>
    <string name="str_add_user">Add or Delete User</string>
    <string name="str_add_user_button">Add</string>
    <string name="str_add_user_exists">User already exists</string>
    <string name="str_add_user_del_warn">Deleting a user will erase all data files belonging to that user (battery saves, savestates, custom cheats, layout configurations, etc.). This action cannot be undone! Are you sure you want to continue? (After deletion, it will automatically switch to the default user and refresh the user list to avoid potential issues.)</string>
    <string name="str_user_oldpathwarn" formatted="false">This user is using a legacy external directory %s which is no longer supported or accessible by DraStic. Please copy the contents of it to your current system directory\'s \'/users/%s\' directory, and select \'Continue\' when done to complete the migration. If you do not want to copy the data, select \'Continue\' now to use the folder as-is.</string>
    <string name="str_cm_abxy_A">A</string>
    <string name="str_cm_abxy_B">B</string>
    <string name="str_cm_abxy_X">X</string>
    <string name="str_cm_abxy_Y">Y</string>
    <string name="str_common_enabled">enabled</string>
    <string name="str_common_cancel">Cancel</string>
    <string name="str_common_default">Default</string>
    <string name="str_cm_ctrlheader">Controller Layout</string>
    <string name="str_common_hide">Hide</string>
    <string name="str_common_apply">Apply</string>
    <string name="str_cm_ctrlresize">Resize</string>
    <string name="str_common_show">Show</string>
    <string name="str_cm_defaultheader">Global Layout</string>
    <string name="str_cm_deleteforgame">Delete Game-specific Layout</string>
    <string name="str_cm_editbg">Set background image</string>
    <string name="str_cm_editctrl">Edit Controller Layout</string>
    <string name="str_cm_editdefault">Edit Global</string>
    <string name="str_cm_editforgame">Edit Game</string>
    <string name="str_cm_forgameheader">Game-specific Layout</string>
    <string name="str_common_menu">Menu</string>
    <string name="str_cm_nobgfound">No image files found in:</string>
    <string name="str_cm_removebg">Remove image</string>
    <string name="str_cm_resetdefault">Reset to Default</string>
    <string name="str_common_back">Back</string>
    <string name="str_cm_resizescreen">Resize Screen</string>
    <string name="str_cm_savedefault">Save as global Layout</string>
    <string name="str_cm_saveforgame">Save for current Game</string>
    <string name="str_cm_scale_aspect">keep aspect</string>
    <string name="str_cm_selectctrltoast">Please select an Element</string>
    <string name="str_cm_selecttoast">Please select a Screen</string>
    <string name="str_cm_tool_close">Close Tools</string>
    <string name="str_cm_tool_open">Open Tools</string>
    <string name="str_cpy_fail">Data could not be moved.</string>
    <string name="str_cpy_success">Data was moved successfully.</string>
    <string name="str_dev_htcone">"Please disable HTC Gestures in the settings, to allow the application to register all touch presses.
Setting the sound latency to medium or low is not recommended on this device."</string>
    <string name="str_editor_tv_end_msg">Do you want to save your changes?</string>
    <string name="str_editor_tv_start_msg">Saved layouts were found</string>
    <string name="str_err_badarc">"The archive you tried to open is not supported.
Please try to extract the .nds file and load that instead"</string>
    <string name="str_err_badrom">The file you tried to open is not a valid ROM.</string>
    <string name="str_err_encrom">"This version of the ROM is encrypted. Encrypted ROMs can only be loaded using the Nintendo ARM7 BIOS dumped from your Nintendo DS.
Please refer to our FAQ at drastic-ds.com for information about the Nintendo ARM7 BIOS, or how to decrypt the ROM yourself."</string>
    <string name="str_err_install">"DraStic could not write to
$path$.
Please check the free space on the internal storage and make sure the directory has writing permission.
Also try to reboot your device."</string>
    <string name="str_err_jniload">DraStic could not be initialized. Please try downloading the app again.</string>
    <string name="str_err_lowmem">The device is running low on memory, DraStic might close unexpectedly..</string>
    <string name="str_err_lowmem_zip">"The device is running low on memory, DraStic might close unexpectedly.
Try to unzip the game, as playing from .zip files takes more memory."</string>
    <string name="str_err_nomount">DraStic can not create its save folder. If your device is connected to a PC/Mac through USB, please disconnect and restart DraStic.</string>
    <string name="str_err_norumble_controller">The currently selected controller has no rumble functionality available. If you are certain your controller has rumble motors and are seeing this message, please Star this Android issue to encourage Google to address it: https://issuetracker.google.com/issues/128314303</string>
    <string name="str_err_norumble_internal">The current device has no internal rumble motor. Rumble functionality will not work as expected.</string>
    <string name="str_err_nospace">The game could not be loaded. Please free some space on your internal storage</string>
    <string name="str_err_reload">"DraStic has been closed while it was suspended and needed to restart.
You should be able to resume your game by pressing 'Continue'."</string>
    <string name="str_err_reload_auto">"DraStic has been closed while it was suspended and needed to restart.
To keep your progress in such cases, please enabled auto-saving on pause/suspend.
Do you want to enable the setting now?"</string>
    <string name="str_err_romgeneral">An error occurred while trying to load the game</string>
    <string name="str_err_rootpath">DraStic could not access the data directory. Please restart the application</string>
    <string name="str_gm_changegame">Change Game</string>
    <string name="str_gm_cheats">Cheat Database</string>
    <string name="str_gm_cheats_add">Add Cheat</string>
    <string name="str_gm_cheats_assorted">Assorted</string>
    <string name="str_gm_cheats_code">Code</string>
    <string name="str_gm_cheats_custom">Custom Cheats</string>
    <string name="str_gm_cheats_custom_enable">Enable Cheat</string>
    <string name="str_gm_cheats_delete_confirm">Delete Cheat?</string>
    <string name="str_gm_cheats_desc">Description</string>
    <string name="str_gm_cheats_disable_all">Disable All</string>
    <string name="str_gm_cheats_edit">Edit Cheat</string>
    <string name="str_gm_cheats_menu_header">Custom Cheat Menu</string>
    <string name="str_gm_cheats_name">Name</string>
    <string name="str_gm_cheats_ondisabled">This folder only allows enabling one cheat at a time. The other cheats were disabled</string>
    <string name="str_gm_cheats_save">Save</string>
    <string name="str_gm_cheats_single">Select only one</string>
    <string name="str_gm_cheats_warning">Warning: Cheats or combinations of cheats can cause unexpected things to happen in the game, including breaking it. Once you enable a cheat it will usually not go away if you disable it, unless you reset and load an in-game save. Always make sure you have in-game saves to fall back on when using cheats!</string>
    <string name="str_gm_custom_error_add">Error: Cheat could not be added.</string>
    <string name="str_gm_custom_error_save">Error: Custom cheats could not be saved.</string>
    <string name="str_gm_custom_invalid">The cheat format is not valid.</string>
    <string name="str_gm_custom_warning">The cheat you are trying to add is already present.</string>
    <string name="str_gm_exit">Quit</string>
    <string name="str_gm_hdr_game">Game</string>
    <string name="str_gm_hdr_misc">More</string>
    <string name="str_gm_layout">Edit Screens and Virtual Pad</string>
    <string name="str_gm_layout_hdr">Select Layout for Editing</string>
    <string name="str_gm_layout_select">Select Screen Layout</string>
    <string name="str_gm_layout_tv">Edit Screen Layout</string>
    <string name="str_gm_loadstate">Load Savestate</string>
    <string name="str_set_edge_marking">Disable Edge-Marking</string>
    <string name="str_set_extdisplay">External Display Mode</string>
    <string name="str_set_extdisplay_border">External Display Border</string>
    <string name="str_set_extdisplay_screen">External Display Screen</string>
    <string name="str_set_ffwd_indicator">Show Fast-Forward Indicator</string>
    <string name="str_set_ffwd_speed">Fast-Forward maximum Speed</string>
    <string name="str_set_filter">Filter</string>
    <string name="str_set_fixmainscreen">Keep Main Screen on Top Screen</string>
    <string name="str_set_fs">Frameskip</string>
    <string name="str_set_fs_safe">Safe Frameskip</string>
    <string name="str_set_fs_value">Frameskip Value</string>
    <string name="str_set_gl16bit">16-Bit Rendering</string>
    <string name="str_set_hdr_video">Video Settings</string>
    <string name="str_set_hires">Internal 3D Resolution (1x-4x)</string>
    <string name="str_set_threaded">Multi-Threaded 3D Rendering</string>
    <string name="str_set_threaded_hint">"Improves performance in 3D heavy games, but may cause graphical glitches (like swapped screens) for some games.
If you experience any rendering glitches, please disable this option."</string>
</resources>